objects/ArUserStory__c.object
<CustomObject>
    <fields>
        <fullName>Story_Name__c</fullName>
        <defaultValue>$Label.kcs_dev__aaaabcd</defaultValue>
        <description>Ar User Story</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Ar User Story</inlineHelpText>
        <label>Story Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <description>Ar User Story</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ar User Story</inlineHelpText>
        <label>Today</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isTrue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ar User Story</description>
        <inlineHelpText>Ar User Story</inlineHelpText>
        <label>isTrue</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>